--- a/_sass/colors/light-syntax.scss
+++ b/_sass/colors/light-syntax.scss
@@ -85,8 +85,8 @@
 
   /* --- custom light colors --- */
   --highlight-bg-color: #f6f8fa;
-  --highlighter-rouge-color: #0086B3;
+  --highlighter-rouge-color: #4b566a;
   --highlight-lineno-color: #c2c6cc;
   --highlight-lineno-border-color: #e9ecef;
-  --inline-code-bg: #f6f8fa;
+  --inline-code-bg: #f1f1f1;
 } // light-syntax
