--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,17 +79,18 @@
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
   <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 
-  <meta name="baidu-site-verification" content="code-SEm6KL3f7A" />
+  <meta name="baidu-site-verification" content="code-LaMrc1BO1k" />
 
   {% include css-selector.html %}
 
   <!-- JavaScripts -->
-
+  
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 
   <script defer
     src="https://cdn.jsdelivr.net/combine/npm/popper.js@1.15.0,npm/bootstrap@4/dist/js/bootstrap.min.js"></script>
 
+  
   {% include js-selector.html %}
 
 </head>
