--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -780,6 +780,12 @@ img:not(.emoji) {
   box-shadow: 0 1px 15px rgba(27,31,35,.15), 0 0 1px rgba(106,115,125,.35);
 }
 
+img.myavatar {
+  width: 100px;
+  border-radius: 15px;
+  box-shadow: 0 1px 15px rgba(27,31,35,.15), 0 0 1px rgba(106,115,125,.35);
+}
+
 .post {
   h1 {
     margin-top: 0.7rem;
