--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -786,6 +786,9 @@ img.myavatar {
   box-shadow: 0 1px 15px rgba(27,31,35,.15), 0 0 1px rgba(106,115,125,.35);
 }
 
+i.leancloud-visitors-count {
+  font-style: normal!important;
+}
 .post {
   h1 {
     margin-top: 0.7rem;
