--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -17,7 +17,7 @@
 }
 
 @mixin dot($pl: 0.2rem, $pr: 0.4rem) {
-  content: "\2022";
+  content: "\2758"; /*我改成竖线了2333*/
   color: rgba(158, 158, 158, 0.8);
   padding-left: $pl;
   padding-right: $pr;
@@ -145,7 +145,7 @@
 }
 
 #toc li>a {
-  line-height: 1rem;
+  line-height: 1.2rem;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
 }
