--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -41,7 +41,7 @@
 
 %heading {
   font-weight: bold;
-  font-family: 'Lato', '微软雅黑', 'Microsoft Yahei', sans-serif;
+  font-family: 'Lato', 'PingFang SC', 'Microsoft Yahei', sans-serif;
 }
 
 %section {
