--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: page
 
     <h1>
       <a href="{{ post.url | relative_url }}">
-        <img class="emoji" src = "/assets/img/sample/tp.png" width = "22px"/>
+        <img class="emoji" src = "/assets/img/sample/1f381.svg" width = "22px" style="margin-bottom:2px ;"/>
         {{ post.title }}
       </a>
     </h1>
