--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -649,6 +649,8 @@ h2 {
   @extend %section;
   @extend %anchor;
   font-size: 1.4rem;
+  border-bottom: 4px dashed #d7dfe9;
+  padding-bottom: 0.3rem;
 }
 
 h3 {
