--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -40,6 +40,7 @@
 }
 
 %heading {
+  line-height: 1.3!important;
   font-weight: bold;
   font-family: 'Microsoft Yahei', sans-serif;
 } /*'Lato', 'PingFang SC', */
