--- a/_sass/layout/categories.scss
+++ b/_sass/layout/categories.scss
@@ -62,3 +62,7 @@
   -webkit-transform: rotate(-90deg); /* Safari 3-8 */
   transform: rotate(-90deg);
 }
+
+.card {
+  box-shadow: 0 2px 10px 0 var(--card-box-shadow);
+}
