--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -17,7 +17,7 @@
 %table-cell {
   padding: 0.4rem 1rem;
   font-size: 95%;
-  white-space: nowrap
+  white-space: nowrap;
   border: 1px solid var(--tb-border-color);
 }
 
