--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -114,8 +114,8 @@
 
 @mixin align-center {
   position: relative;
-  left: 50%;
+ /*  left: 50%;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
 }
